--- a/Vistas/winArticulos.xaml
+++ b/Vistas/winArticulos.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Vistas.winArticulos"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Modulo de Artículos" Style="{StaticResource MainWindowStyle}" MouseLeftButtonDown="moveWindow" Height="594" Width="419" WindowStartupLocation="CenterScreen" MinHeight="594" MinWidth="419">
+        Title="Modulo de Artículos" Style="{StaticResource MainWindowStyle}" MouseLeftButtonDown="moveWindow" Height="720" Width="1280" WindowStartupLocation="CenterScreen">
     
     <Grid>
         <Border BorderBrush="Black" BorderThickness="1" CornerRadius="10">
@@ -18,6 +18,86 @@
                 </LinearGradientBrush>
             </Border.Background>
         </Border>
+        
+        <Grid x:Name="lGrid" Margin="0,40,0,10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="362*" />
+                <ColumnDefinition Width="588*" />
+            </Grid.ColumnDefinitions>
+            
+            <Grid Grid.Column="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="360*" />
+                    <RowDefinition Height="69*" />
+                </Grid.RowDefinitions>
+
+                <Grid Margin="0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="270*" />
+                    </Grid.RowDefinitions>
+
+                    <Grid Name="grdArticuloForm" Margin="30">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="189*" />
+                            <ColumnDefinition Width="191*" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="72*" />
+                            <RowDefinition Height="36*" />
+                            <RowDefinition Height="36*" />
+                            <RowDefinition Height="36*" />
+                            <RowDefinition Height="36*" />
+                            <RowDefinition Height="50*" />
+                        </Grid.RowDefinitions>
+
+                        <Label Name="lblNewArtTitle" Width="auto" Content="Nuevo Artículo" VerticalAlignment="Top" Margin="0,20,0,0" Style="{StaticResource FormTitle}" Grid.ColumnSpan="2" Height="38" />
+                        <Label Name="lblNewArtDescrip" Content="Ingrese los datos del Artículo" VerticalAlignment="Bottom" Style="{StaticResource FormDescription}" Grid.ColumnSpan="2" Margin="0,0,0,40" Width="237" />
+
+                        <Label HorizontalAlignment="Right" Grid.Row="1" Content="Familia:" Name="label2" Style="{StaticResource StyleLabelForm}" Margin="0,3,11,6" />
+                        <Label HorizontalAlignment="Right" Grid.Row="2" Content="Unidad de Medida:" Name="label3" Style="{StaticResource StyleLabelForm}" />
+                        <Label HorizontalAlignment="Right" Content="Precio:" Name="label4" Grid.Row="3" Style="{StaticResource StyleLabelForm}" />
+                        <Label HorizontalAlignment="Right" Content="Stock:" Name="label5" Grid.Row="4" Style="{StaticResource StyleLabelForm}"  />
+                        <CheckBox Margin="6" HorizontalAlignment="Left" Name="chkStock" VerticalAlignment="Center" Grid.Row="4" Grid.Column="1" />
+                        <TextBox Style="{StaticResource StyleTextBoxForm}" Width="120" Name="txtPrecio" VerticalAlignment="Center" Grid.Column="1" Margin="5,0,0,0" Grid.Row="3" />
+
+                        <ComboBox HorizontalAlignment="Left" Name="cboFlia" Grid.Column="1" Grid.Row="1" Margin="5,0" Height="23" Width="120">
+                            <ComboBoxItem  Content="Materias Primas" />
+                            <ComboBoxItem Content="Bebidas" />
+                        </ComboBox>
+                        <ComboBox Height="23" HorizontalAlignment="Left" Margin="5,0,0,0" Name="cboMedida" VerticalAlignment="Center" Grid.Row="2" Grid.Column="1" BorderBrush="#FFE53535" Width="120">
+                            <ComboBoxItem Content="kg" />
+                            <ComboBoxItem Content="L" />
+                            <ComboBoxItem Content="mL" />
+                        </ComboBox>
+                        
+                        <Label Grid.Row="5" Content="Descripción del Artículo:" Name="label6" Style="{StaticResource StyleLabelForm}" HorizontalAlignment="Center" Margin="30,22,8,26" />
+                        <TextBox Grid.Column="1" Grid.Row="5" Style="{StaticResource StyleTextBoxForm}" Name="txtDescripcion" HorizontalAlignment="Center" VerticalContentAlignment="Top" Width="191" MinHeight="60" FontSize="13" Margin="4,14,16,15" />
+                    </Grid>
+
+                    <!--
+                    <StackPanel Grid.RowSpan="2" Name="stackPanel1" Orientation="Vertical" Grid.Row="1">
+                        <Label Content="Descripción del Artículo:" Name="label6" Style="{StaticResource StyleLabelForm}" HorizontalAlignment="Center"/>
+                        <TextBox Style="{StaticResource StyleTextBoxForm}" Name="txtDescripcion" HorizontalAlignment="Center" VerticalContentAlignment="Top" Width="269" MinHeight="60" FontSize="13"  />
+                    </StackPanel>
+                    -->
+                    
+                </Grid>
+
+                <!-- grid botones-->
+                <Grid Margin="5" Grid.Row="2">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="33*" />
+                        <ColumnDefinition Width="33*" />
+                        <ColumnDefinition Width="33*" />
+                    </Grid.ColumnDefinitions>
+                    <Button Grid.Column="0" Content="Añadir" Style="{StaticResource ButtonFormBlack}"></Button>
+                    <Button Grid.Column="1" Content="Modificar" Style="{StaticResource ButtonFormBlack}"></Button>
+                    <Button Grid.Column="2" Content="Eliminar" Style="{StaticResource ButtonFormBlack}"></Button>
+                </Grid>
+            </Grid>
+        </Grid>
+        
+        <!--
         <Grid Margin="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="354*" />
@@ -29,6 +109,7 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="189*" />
                     <ColumnDefinition Width="191*" />
+                    <ColumnDefinition Width="300*" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="129*" />
@@ -63,9 +144,9 @@
                 <Label Content="Descripción del Artículo:" Name="label6" Style="{StaticResource StyleLabelForm}" HorizontalAlignment="Center"/>
                 <TextBox Style="{StaticResource StyleTextBoxForm}" Name="txtDescripcion" HorizontalAlignment="Center" VerticalContentAlignment="Top" Width="269" MinHeight="60" FontSize="13" />
             </StackPanel>
-
             <Button Grid.Row="2" Content="GUARDAR" Name="btnGuardar" HorizontalAlignment="Center" Click="btnGuardar_Click"  Style="{StaticResource ButtonFormBlack}"/>
-
         </Grid>
+        -->
+        
     </Grid>
 </Window>
