--- a/Vistas/winArticulos.xaml
+++ b/Vistas/winArticulos.xaml
@@ -1,8 +1,15 @@
 ﻿<Window x:Class="Vistas.winArticulos"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
         Title="Modulo de Artículos" Style="{StaticResource MainWindowStyle}" MouseLeftButtonDown="moveWindow" Height="720" Width="1280" WindowStartupLocation="CenterScreen">
-    
+    <Window.Resources>
+        <ObjectDataProvider
+            x:Key="Data_Articulo"
+            ObjectType="{x:Type svc:TrabajarArticulos}"
+            MethodName="TraerArticulo">
+        </ObjectDataProvider>
+    </Window.Resources>
     <Grid>
         <Border BorderBrush="Black" BorderThickness="1" CornerRadius="10">
             <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
@@ -58,7 +65,12 @@
                         <Label HorizontalAlignment="Right" Content="Precio:" Name="label4" Grid.Row="3" Style="{StaticResource StyleLabelForm}" />
                         <Label HorizontalAlignment="Right" Content="Stock:" Name="label5" Grid.Row="4" Style="{StaticResource StyleLabelForm}"  />
                         <CheckBox Margin="6" HorizontalAlignment="Left" Name="chkStock" VerticalAlignment="Center" Grid.Row="4" Grid.Column="1" />
-                        <TextBox Style="{StaticResource StyleTextBoxForm}" Width="120" Name="txtPrecio" VerticalAlignment="Center" Grid.Column="1" Margin="5,0,0,0" Grid.Row="3" />
+                        <TextBox Width="120" Name="txtPrecio" VerticalAlignment="Center"  Grid.Column="1" Margin="5,0,0,0" Grid.Row="3" DataContext="{StaticResource Data_Articulo}" Style="{StaticResource EstiloError}">
+                            <TextBox.Text>
+                                <Binding Path="Art_Precio" UpdateSourceTrigger="PropertyChanged"
+                                 ValidatesOnExceptions="true" ValidatesOnDataErrors="true"></Binding>
+                            </TextBox.Text>
+                        </TextBox>
 
                         <ComboBox HorizontalAlignment="Left" Name="cboFlia" Grid.Column="1" Grid.Row="1" Margin="5,0" Height="23" Width="120">
                             <ComboBoxItem  Content="Materias Primas" />
@@ -71,7 +83,14 @@
                         </ComboBox>
                         
                         <Label Grid.Row="5" Content="Descripción del Artículo:" Name="label6" Style="{StaticResource StyleLabelForm}" HorizontalAlignment="Center" Margin="30,22,8,26" />
-                        <TextBox Grid.Column="1" Grid.Row="5" Style="{StaticResource StyleTextBoxForm}" Name="txtDescripcion" HorizontalAlignment="Center" VerticalContentAlignment="Top" Width="191" MinHeight="60" FontSize="13" Margin="4,14,16,15" />
+                        <TextBox Grid.Column="1" Grid.Row="5" DataContext="{StaticResource Data_Articulo}" Style="{StaticResource EstiloError}" Name="txtDescripcion" 
+                                 HorizontalAlignment="Center" VerticalContentAlignment="Top" Width="191" MinHeight="60" FontSize="13" Margin="4,14,16,15">
+                            <TextBox.Text>
+                                <Binding Path="Art_Descrip" UpdateSourceTrigger="PropertyChanged"
+                                 ValidatesOnExceptions="true" ValidatesOnDataErrors="true"></Binding>
+                            </TextBox.Text>
+                        </TextBox>
+
                     </Grid>
 
                     <!--
