--- a/Vistas/winCategorias.xaml
+++ b/Vistas/winCategorias.xaml
@@ -1,7 +1,15 @@
 ﻿<Window x:Class="Vistas.winCategorias"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
         Title="winCategorias" Height="350" Width="400" Style="{StaticResource MainWindowStyle}" WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow" MinHeight="350" MinWidth="400">
+    <Window.Resources>
+        <ObjectDataProvider
+            x:Key="Data_Cat"
+            ObjectType="{x:Type svc:TrabajarCategorias}"
+            MethodName="TraerCategoria">
+        </ObjectDataProvider>
+    </Window.Resources>
     <Grid>
         <Border Style="{StaticResource MainGridStyle}">
             <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
@@ -27,7 +35,12 @@
                 <Label Name="lblNewCatTitle" Content="Nueva Categoría"  Style="{StaticResource FormTitle}" Grid.ColumnSpan="2" Margin="61,33,53,53" Width="263" />
                 <Label Name="lblNewCatDescrip" Content="Ingrese los datos de la Categoría"  Style="{StaticResource FormDescription}" Grid.ColumnSpan="2" Margin="77,72,69,33" Width="237" />
                 <Label Content="Descripción " Name="lblFCatDescrip" Grid.Row="1" Style="{StaticResource StyleLabelForm}" Grid.Column="0" Width="Auto" />
-                <TextBox Name="txtCatDescrip" Grid.Row="1" Grid.Column="1" Style="{StaticResource StyleTextBoxForm}" />
+                <TextBox Name="txtCatDescrip" Grid.Row="1" Grid.Column="1" DataContext="{StaticResource Data_Cat}" Style="{StaticResource EstiloError}">
+                    <TextBox.Text>
+                        <Binding Path="Cat_Descrip" UpdateSourceTrigger="PropertyChanged"
+                                 ValidatesOnExceptions="true" ValidatesOnDataErrors="true"></Binding>
+                    </TextBox.Text>
+                </TextBox>
             </Grid>
             <DockPanel Grid.Row="1">
                 <Button Content="GUARDAR" Name="btnGuardar" Click="btnGuardar_Click" HorizontalAlignment="Center" Style="{StaticResource ButtonFormBlack}"></Button>
