--- a/Vistas/winFamilias.xaml
+++ b/Vistas/winFamilias.xaml
@@ -1,7 +1,15 @@
 ﻿<Window x:Class="Vistas.winFamilias"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
         Title="winFamilias" Height="350" Width="400" Style="{StaticResource MainWindowStyle}" WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow" MinHeight="350" MinWidth="400">
+    <Window.Resources>
+        <ObjectDataProvider
+            x:Key="Data_Fam"
+            ObjectType="{x:Type svc:TrabajarFamilias}"
+            MethodName="TraerFamilia">
+        </ObjectDataProvider>
+    </Window.Resources>
     <Grid>
         <Border Style="{StaticResource MainGridStyle}">
             <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
@@ -29,7 +37,12 @@
                 <Label Name="lblNewFamDescrip" Content="Ingrese los datos de la Familia"  Style="{StaticResource FormDescription}" Grid.ColumnSpan="2" Margin="77,72,69,33" Width="237" />
 
                 <Label Content="Descripción " Name="lblFamDescrip" Grid.Row="1" Style="{StaticResource StyleLabelForm}" Grid.Column="0" Width="Auto" />
-                <TextBox Name="txtFamDescrip" Grid.Row="1" Grid.Column="1" Style="{StaticResource StyleTextBoxForm}" />
+                <TextBox Name="txtFamDescrip" Grid.Row="1" Grid.Column="1" DataContext="{StaticResource Data_Fam}" Style="{StaticResource EstiloError}">
+                    <TextBox.Text>
+                        <Binding Path="Fam_Descrip" UpdateSourceTrigger="PropertyChanged"
+                                 ValidatesOnExceptions="true" ValidatesOnDataErrors="true"></Binding>
+                    </TextBox.Text>                    
+                </TextBox>
 
             </Grid>
 
