--- a/Vistas/winUnidadesDeMedida.xaml
+++ b/Vistas/winUnidadesDeMedida.xaml
@@ -1,7 +1,15 @@
 ﻿<Window x:Class="Vistas.winUnidadesDeMedida"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
         Title="winUnidadesDeMedida" Height="450" Width="400" Style="{StaticResource MainWindowStyle}" WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow" MinHeight="450" MinWidth="400">
+    <Window.Resources>
+        <ObjectDataProvider
+            x:Key="Data_UM"
+            ObjectType="{x:Type svc:TrabajarUM}"
+            MethodName="TraerUM">
+        </ObjectDataProvider>
+    </Window.Resources>
     <Grid>
         <Border Style="{StaticResource MainGridStyle}">
             <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
@@ -32,10 +40,19 @@
                 <Label Name="lblNewUMDescrip" Content="Ingrese los datos de la Unidad de Medida"  Style="{StaticResource FormDescription}" Grid.ColumnSpan="2" Margin="1,72,1,33" />
 
                 <Label Content="Descripción" Name="lblUMDescrip" Grid.Row="1" Style="{StaticResource StyleLabelForm}" Grid.Column="0" Width="Auto" />
-                <TextBox Name="txtUMDescrip" Grid.Row="1" Grid.Column="1" Style="{StaticResource StyleTextBoxForm}" />
-
+                <TextBox Name="txtUMDescrip" Grid.Row="1" Grid.Column="1"  DataContext="{StaticResource Data_UM}" Style="{StaticResource EstiloError}">
+                    <TextBox.Text>
+                        <Binding Path="Um_Descrip" UpdateSourceTrigger="PropertyChanged"
+                                 ValidatesOnExceptions="true" ValidatesOnDataErrors="true"></Binding>
+                    </TextBox.Text>
+                </TextBox>
                 <Label Content="Abreviatura" Name="lblUMAbrev" Grid.Row="2" Style="{StaticResource StyleLabelForm}" Grid.Column="0" Width="Auto" />
-                <TextBox Name="txtUMAbrev" Grid.Row="2" Grid.Column="1" Style="{StaticResource StyleTextBoxForm}" />
+                <TextBox Name="txtUMAbrev" Grid.Row="2" Grid.Column="1" DataContext="{StaticResource Data_UM}" Style="{StaticResource EstiloError}">
+                    <TextBox.Text>
+                        <Binding Path="Um_Abrev" UpdateSourceTrigger="PropertyChanged"
+                                 ValidatesOnExceptions="true" ValidatesOnDataErrors="true"></Binding>
+                    </TextBox.Text>
+                </TextBox>
             </Grid>
             
             <DockPanel Grid.Row="1">
