--- a/Vistas/App.xaml
+++ b/Vistas/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="Vistas.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="winLogin.xaml">
+             StartupUri="winMesas.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -14,6 +14,7 @@
                 <ResourceDictionary Source="Styles/StylesFormWindow.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="Styles/StylesFormGrid.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="Styles/StylesValidation.xaml"></ResourceDictionary>
+                 
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
