--- a/Vistas/winArticulos.xaml
+++ b/Vistas/winArticulos.xaml
@@ -2,13 +2,14 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
-        Title="Modulo de Artículos" Style="{StaticResource MainWindowStyle}" MouseLeftButtonDown="moveWindow" Height="720" Width="1280" WindowStartupLocation="CenterScreen">
+        Title="Modulo de Artículos" Style="{StaticResource MainWindowStyle}" MouseLeftButtonDown="moveWindow" Height="600" Width="1000" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <ObjectDataProvider
             x:Key="Data_Articulo"
             ObjectType="{x:Type svc:TrabajarArticulos}"
             MethodName="TraerArticulo">
         </ObjectDataProvider>
+        <ObjectDataProvider ObjectType="{x:Type svc:TrabajarArticulos}" MethodName="traerArticulos" x:Key="list_articulos"/>
     </Window.Resources>
     <Grid>
         <Border BorderBrush="Black" BorderThickness="1" CornerRadius="10">
@@ -27,81 +28,84 @@
         </Border>
         
         <Grid x:Name="lGrid" Margin="0,40,0,10">
+            
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="362*" />
                 <ColumnDefinition Width="588*" />
             </Grid.ColumnDefinitions>
             
             <Grid Grid.Column="0">
+                
                 <Grid.RowDefinitions>
                     <RowDefinition Height="360*" />
                     <RowDefinition Height="69*" />
                 </Grid.RowDefinitions>
 
-                <Grid Margin="0">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="270*" />
-                    </Grid.RowDefinitions>
-
-                    <Grid Name="grdArticuloForm" Margin="30">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="189*" />
-                            <ColumnDefinition Width="191*" />
-                        </Grid.ColumnDefinitions>
+                
+                    <Grid Margin="20,0">
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="72*" />
-                            <RowDefinition Height="36*" />
-                            <RowDefinition Height="36*" />
-                            <RowDefinition Height="36*" />
-                            <RowDefinition Height="36*" />
-                            <RowDefinition Height="50*" />
+                            <RowDefinition Height="270*" />
                         </Grid.RowDefinitions>
 
-                        <Label Name="lblNewArtTitle" Width="auto" Content="Nuevo Artículo" VerticalAlignment="Top" Margin="0,20,0,0" Style="{StaticResource FormTitle}" Grid.ColumnSpan="2" Height="38" />
-                        <Label Name="lblNewArtDescrip" Content="Ingrese los datos del Artículo" VerticalAlignment="Bottom" Style="{StaticResource FormDescription}" Grid.ColumnSpan="2" Margin="0,0,0,40" Width="237" />
+                        <Grid Name="grdArticuloForm">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="189*" />
+                                <ColumnDefinition Width="191*" />
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="28*" />
+                                <RowDefinition Height="12*" />
+                                <RowDefinition Height="12*" />
+                                <RowDefinition Height="12*" />
+                                <RowDefinition Height="12*" />
+                                <RowDefinition Height="24*" />
+                            </Grid.RowDefinitions>
 
-                        <Label HorizontalAlignment="Right" Grid.Row="1" Content="Familia:" Name="label2" Style="{StaticResource StyleLabelForm}" Margin="0,3,11,6" />
-                        <Label HorizontalAlignment="Right" Grid.Row="2" Content="Unidad de Medida:" Name="label3" Style="{StaticResource StyleLabelForm}" />
-                        <Label HorizontalAlignment="Right" Content="Precio:" Name="label4" Grid.Row="3" Style="{StaticResource StyleLabelForm}" />
-                        <Label HorizontalAlignment="Right" Content="Stock:" Name="label5" Grid.Row="4" Style="{StaticResource StyleLabelForm}"  />
-                        <CheckBox Margin="6" HorizontalAlignment="Left" Name="chkStock" VerticalAlignment="Center" Grid.Row="4" Grid.Column="1" />
-                        <TextBox Width="120" Name="txtPrecio" VerticalAlignment="Center"  Grid.Column="1" Margin="5,0,0,0" Grid.Row="3" DataContext="{StaticResource Data_Articulo}" Style="{StaticResource EstiloError}">
-                            <TextBox.Text>
-                                <Binding Path="Art_Precio" UpdateSourceTrigger="PropertyChanged"
+                            <Label Name="lblNewArtTitle" Width="auto" Content="Nuevo Artículo" VerticalAlignment="Top" Margin="0,20,0,0" Style="{StaticResource FormTitle}" Grid.ColumnSpan="2" Height="50" />
+                            <Label Name="lblNewArtDescrip" Content="Ingrese los datos del Artículo" VerticalAlignment="Bottom" Style="{StaticResource FormDescription}" Grid.ColumnSpan="2" Margin="0,0,0,25" Width="237" />
+
+                            <Label HorizontalAlignment="Right" Grid.Row="1" Content="Familia:" Name="label2" Style="{StaticResource StyleLabelForm}" Margin="0,3,11,6" />
+                            <Label HorizontalAlignment="Right" Grid.Row="2" Content="Unidad de Medida:" Name="label3" Style="{StaticResource StyleLabelForm}" />
+                            <Label HorizontalAlignment="Right" Content="Precio:" Name="label4" Grid.Row="3" Style="{StaticResource StyleLabelForm}" />
+                            <Label HorizontalAlignment="Right" Content="Stock:" Name="label5" Grid.Row="4" Style="{StaticResource StyleLabelForm}"  />
+                            <CheckBox Margin="6" HorizontalAlignment="Left" Name="chkStock" VerticalAlignment="Center" Grid.Row="4" Grid.Column="1" />
+                            <TextBox Width="120" Name="txtPrecio" VerticalAlignment="Center"  Grid.Column="1" Margin="5,0,0,0" Grid.Row="3" DataContext="{StaticResource Data_Articulo}" Style="{StaticResource EstiloError}">
+                                <TextBox.Text>
+                                    <Binding Path="Art_Precio" UpdateSourceTrigger="PropertyChanged"
                                  ValidatesOnExceptions="true" ValidatesOnDataErrors="true"></Binding>
-                            </TextBox.Text>
-                        </TextBox>
+                                </TextBox.Text>
+                            </TextBox>
 
-                        <ComboBox HorizontalAlignment="Left" Name="cboFlia" Grid.Column="1" Grid.Row="1" Margin="5,0" Height="23" Width="120">
-                            <ComboBoxItem  Content="Materias Primas" />
-                            <ComboBoxItem Content="Bebidas" />
-                        </ComboBox>
-                        <ComboBox Height="23" HorizontalAlignment="Left" Margin="5,0,0,0" Name="cboMedida" VerticalAlignment="Center" Grid.Row="2" Grid.Column="1" BorderBrush="#FFE53535" Width="120">
-                            <ComboBoxItem Content="kg" />
-                            <ComboBoxItem Content="L" />
-                            <ComboBoxItem Content="mL" />
-                        </ComboBox>
-                        
-                        <Label Grid.Row="5" Content="Descripción del Artículo:" Name="label6" Style="{StaticResource StyleLabelForm}" HorizontalAlignment="Center" Margin="30,22,8,26" />
-                        <TextBox Grid.Column="1" Grid.Row="5" DataContext="{StaticResource Data_Articulo}" Style="{StaticResource EstiloError}" Name="txtDescripcion" 
-                                 HorizontalAlignment="Center" VerticalContentAlignment="Top" Width="191" MinHeight="60" FontSize="13" Margin="4,14,16,15">
-                            <TextBox.Text>
-                                <Binding Path="Art_Descrip" UpdateSourceTrigger="PropertyChanged"
+                            <ComboBox HorizontalAlignment="Left" Name="cboFlia" Grid.Column="1" Grid.Row="1" Margin="5,0" Height="23" Width="120">
+                                <ComboBoxItem  Content="Materias Primas" />
+                                <ComboBoxItem Content="Bebidas" />
+                            </ComboBox>
+                            <ComboBox Height="23" HorizontalAlignment="Left" Margin="5,0,0,0" Name="cboMedida" VerticalAlignment="Center" Grid.Row="2" Grid.Column="1" BorderBrush="#FFE53535" Width="120">
+                                <ComboBoxItem Content="kg" />
+                                <ComboBoxItem Content="L" />
+                                <ComboBoxItem Content="mL" />
+                            </ComboBox>
+
+                            <Label Grid.Row="5" Grid.ColumnSpan="2" VerticalAlignment="Top" Content="Descripción del Artículo:" Name="label6" Style="{StaticResource StyleLabelForm}" HorizontalAlignment="Center" />
+                            <TextBox Grid.Row="5" Grid.ColumnSpan="2" DataContext="{StaticResource Data_Articulo}" Style="{StaticResource EstiloError}" Name="txtDescripcion" 
+                                 HorizontalAlignment="Center" VerticalAlignment="Bottom" VerticalContentAlignment="Top" Width="191" MinHeight="60" FontSize="13">
+                                <TextBox.Text>
+                                    <Binding Path="Art_Descrip" UpdateSourceTrigger="PropertyChanged"
                                  ValidatesOnExceptions="true" ValidatesOnDataErrors="true"></Binding>
-                            </TextBox.Text>
-                        </TextBox>
+                                </TextBox.Text>
+                            </TextBox>
 
-                    </Grid>
-
+                        </Grid>
+                    
                     <!--
                     <StackPanel Grid.RowSpan="2" Name="stackPanel1" Orientation="Vertical" Grid.Row="1">
                         <Label Content="Descripción del Artículo:" Name="label6" Style="{StaticResource StyleLabelForm}" HorizontalAlignment="Center"/>
                         <TextBox Style="{StaticResource StyleTextBoxForm}" Name="txtDescripcion" HorizontalAlignment="Center" VerticalContentAlignment="Top" Width="269" MinHeight="60" FontSize="13"  />
                     </StackPanel>
                     -->
-                    
-                </Grid>
 
+                    </Grid>
+                
                 <!-- grid botones-->
                 <Grid Margin="5" Grid.Row="2">
                     <Grid.ColumnDefinitions>
@@ -109,11 +113,25 @@
                         <ColumnDefinition Width="33*" />
                         <ColumnDefinition Width="33*" />
                     </Grid.ColumnDefinitions>
-                    <Button Grid.Column="0" Content="Añadir" Style="{StaticResource ButtonFormBlack}"></Button>
-                    <Button Grid.Column="1" Content="Modificar" Style="{StaticResource ButtonFormBlack}"></Button>
-                    <Button Grid.Column="2" Content="Eliminar" Style="{StaticResource ButtonFormBlack}"></Button>
+                    <Button Grid.Column="0" Content="AÑADIR" Style="{StaticResource ButtonFormBlack}" Width="90" HorizontalAlignment="Right"></Button>
+                    <Button Grid.Column="1" Content="MODIFICAR" Style="{StaticResource ButtonFormBlack}" Width="90"></Button>
+                    <Button Grid.Column="2" Content="ELIMINAR" Style="{StaticResource ButtonFormBlack}" Width="90" HorizontalAlignment="Left"></Button>
                 </Grid>
             </Grid>
+            
+            <ListView Name="lvwArticulos" Grid.Column="1" Height="200" Width="500" Background="Black"
+                      ItemsSource="{Binding Source={StaticResource list_articulos}}" Foreground="White" FontFamily="Century Gothic" HorizontalContentAlignment="Center" BorderBrush="Black">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Width="30" Header="ID" DisplayMemberBinding="{Binding Path=art_id}"/>
+                        <GridViewColumn Width="200" Header="Descripción" DisplayMemberBinding="{Binding Path=art_descripcion}"/>
+                        <GridViewColumn Width="40" Header="UM" DisplayMemberBinding="{Binding Path=UM_abreviatura}"/>
+                        <GridViewColumn Width="60" Header="Precio" DisplayMemberBinding="{Binding Path=art_precio}"/>
+                        <GridViewColumn Width="60" Header="Stock" DisplayMemberBinding="{Binding Path=art_stock}"/>
+                        <GridViewColumn Width="110" Header="Familia" DisplayMemberBinding="{Binding Path=fam_descripcion}"/>
+                    </GridView>
+                </ListView.View>
+            </ListView>
         </Grid>
         
         <!--
