--- a/Vistas/winMesas.xaml
+++ b/Vistas/winMesas.xaml
@@ -2,6 +2,10 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="winMesas" Height="500" MouseLeftButtonDown="moveWindow" Width="454" MinHeight="500" MinWidth="454" Style="{StaticResource MainWindowStyle}" WindowStartupLocation="CenterScreen">
+    <Window.Resources>
+        <XmlDataProvider x:Key="estado_Mesa" Source="EstadosMesa.xml" XPath="/colores" IsInitialLoadEnabled="True"/>
+    </Window.Resources>
+    
     <Grid>
         <Border Style="{StaticResource MainGridStyle}">
             <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
@@ -12,9 +16,10 @@
         </Border>
         <Grid Margin="0,40,0,0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="41*" />
-                <RowDefinition Height="320*" />
-                <RowDefinition Height="50*" />
+                <RowDefinition Height="10*" />
+                <RowDefinition Height="10*" />
+                <RowDefinition Height="80*" />
+                <RowDefinition Height="10*" />
             </Grid.RowDefinitions>
             <Label 
             Name="txtTitle"
@@ -26,55 +31,24 @@
             VerticalAlignment="Center"
             HorizontalAlignment="Center"/>
 
-
+            <DockPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
+                
+                <Label Content="ESTADO DE MESA: " FontFamily="Century Gothic" Foreground="Gold" Background="Black" FontWeight="ExtraBold" FontSize="12" />
+                <ComboBox Height="25" Name="cmbEstadoMesas" Width="130" ItemsSource="{Binding Source={StaticResource estado_Mesa}, XPath= estado/@name}">
+                </ComboBox>
+            </DockPanel>
+            
             <!--Grid mesas-->
-            <Grid x:Name="grdMesas"  Grid.Row="1" Margin="20,0" Loaded="grdMesas_Loaded">
-                <!--<Grid.RowDefinitions>
-                    <RowDefinition />
-                    <RowDefinition />
-                    <RowDefinition />
-                    <RowDefinition />
-                    <RowDefinition />
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition />
-                    <ColumnDefinition />
-                    <ColumnDefinition />
-                    <ColumnDefinition />
-                </Grid.ColumnDefinitions>
-
-               
-
-                <Button Style="{StaticResource BotondeMesa}" Background="#99ff76" Content="Mesa 1" Click="preguntarMesa"></Button>
-                <Button Style="{StaticResource BotondeMesa}" Background="#99ff76" Content="Mesa 2" Name="btnMesa2" Grid.Row="0" Grid.Column="1"  Click="preguntarMesa"/>
-                <Button Style="{StaticResource BotondeMesa}" Background="#99ff76" Content="Mesa 3" Name="btnMesa3" Grid.Row="0" Grid.Column="2"  Click="preguntarMesa"/>
-                <Button Style="{StaticResource BotondeMesa}" Background="#99ff76" Content="Mesa 4" Name="btnMesa4" Grid.Row="0" Grid.Column="3"  Click="preguntarMesa"/>
-                <Button Style="{StaticResource BotondeMesa}" Background="#99ff76" Content="Mesa 5" Name="btnMesa5" Grid.Row="1" Grid.Column="0"  Click="preguntarMesa"/>
-                <Button Style="{StaticResource BotondeMesa}" Background="#99ff76" Content="Mesa 6" Name="btnMesa6" Grid.Row="1" Grid.Column="1"  Click="preguntarMesa"/>
-                <Button Style="{StaticResource BotondeMesa}" Background="#99ff76" Content="Mesa 7"  Name="btnMesa7" Grid.Row="1" Grid.Column="2"  Click="preguntarMesa"/>
-                <Button Style="{StaticResource BotondeMesa}" Background="#99ff76" Content="Mesa 8" Name="btnMesa8" Grid.Row="1" Grid.Column="3"  Click="preguntarMesa"/>
-                <Button Style="{StaticResource BotondeMesa}" Background="#99ff76" Content="Mesa 9" Name="btnMesa9" Grid.Row="2" Grid.Column="0"  Click="preguntarMesa"/>
-                <Button Style="{StaticResource BotondeMesa}" Background="#99ff76" Content="Mesa 10" Name="btnMesa10" Grid.Row="2" Grid.Column="1"  Click="preguntarMesa"/>
-                <Button Style="{StaticResource BotondeMesa}" Background="#99ff76" Content="Mesa 11" Name="btnMesa11" Grid.Row="2" Grid.Column="2"  Click="preguntarMesa"/>
-                <Button Style="{StaticResource BotondeMesa}" Background="#99ff76" Content="Mesa 12" Name="btnMesa12" Grid.Row="2" Grid.Column="3"  Click="preguntarMesa"/>
-                <Button Style="{StaticResource BotondeMesa}" Background="#99ff76" Content="Mesa 13" Name="btnMesa13" Grid.Row="3" Grid.Column="0"  Click="preguntarMesa"/>
-                <Button Style="{StaticResource BotondeMesa}" Background="#99ff76" Content="Mesa 14"  Name="btnMesa14" Grid.Row="3" Grid.Column="1"  Click="preguntarMesa"/>
-                <Button Style="{StaticResource BotondeMesa}" Background="#99ff76" Content="Mesa 15" Name="btnMesa15" Grid.Row="3" Grid.Column="2"  Click="preguntarMesa"/>
-                <Button Style="{StaticResource BotondeMesa}" Background="#99ff76" Content="Mesa 16" Name="btnMesa16" Grid.Row="3" Grid.Column="3"  Click="preguntarMesa"/>
-                <Button Style="{StaticResource BotondeMesa}" Background="#99ff76" Content="Mesa 17" Name="btnMesa17" Grid.Row="4" Grid.Column="0"  Click="preguntarMesa"/>
-                <Button Style="{StaticResource BotondeMesa}" Background="#99ff76" Content="Mesa 18" Name="btnMesa18" Grid.Row="4" Grid.Column="1"  Click="preguntarMesa"/>
-                <Button Style="{StaticResource BotondeMesa}" Background="#99ff76" Content="Mesa 19" Name="btnMesa19" Grid.Row="4" Grid.Column="2"  Click="preguntarMesa"/>
-                <Button Style="{StaticResource BotondeMesa}" Background="#99ff76" Content="Mesa 20" Name="btnMesa20" Grid.Row="4" Grid.Column="3"  Click="preguntarMesa"/>
-            -->
+            <Grid x:Name="grdMesas"  Grid.Row="2" Margin="20,0" Loaded="grdMesas_Loaded">
             </Grid>
 
-            <StackPanel Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
+            <StackPanel Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
                 <Ellipse Height="20" Name="ellLibre" Stroke="#99ff76" Width="20" />
                 <Label Content="Libre" Margin="0,0,50,0" Foreground="White"/>
                 <Ellipse Height="20" Name="ellOcup" Stroke="Tomato" Width="20" />
                 <Label Content="Ocupada" Foreground="White"/>
             </StackPanel>
-
+            
         </Grid>
     </Grid>
 </Window>
